--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -122,3 +122,9 @@
 
 .BG01.acordion__activo
   background-color: #E9F0FE
+
+.tabla-b td, .tabla-c td, .tabla-b th, .tabla-c th
+  padding: 10px 20px
+
+.lista-ul--color li, .ol.lista-ol--cuadro li, .lista-ol--cuadro li
+  display: flex
