--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -123,5 +123,5 @@
 .tabla-b td, .tabla-c td, .tabla-b th, .tabla-c th
   padding: 10px 20px
 
-.lista-ul--color li, .ol.lista-ol--cuadro li, .lista-ol--cuadro li
+ul.lista-ul li, .lista-ul--color li, .ol.lista-ol--cuadro li, .lista-ol--cuadro li
   display: flex
